--- a/src/edu/nus/iss/SE24PT8/universityStore/gui/mainWindow/MainWindow.form
+++ b/src/edu/nus/iss/SE24PT8/universityStore/gui/mainWindow/MainWindow.form
@@ -219,6 +219,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Categories"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jToggleButtonCategoriesActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JToggleButton" name="jToggleButtonVendors">
               <Properties>
